@@ -4,6 +4,8 @@ TBD
     to specify a name for the fuse mount (This name is visible
     in the first column of the system `mount` command output).
 
+  * Added Onezone-IA storage-option
+
 2019-02-09, S3QL 3.0
 
   * Added a new `--systemd` option to simplify running mount.s3ql
